# Marketing-control-project

./: README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: marketing-control.iss  marketing-control.spec
src/marketing_control/: __init__.py  __main__.py  app.py  asset_attachment_daily_performance.py  core_account_import.py  core_daily_performance.py  credentials.py  data_access.py  data_history.py  google_ads.py  google_ads_adapter.py  imported_data_preview.py  initial_history.py  integration_status.py  keyword_search_term_performance.py  launcher.py  logging.py  oauth.py  refresh_triggers.py  segmented_daily_performance.py  settings.py  storage.py  supporting_entities_import.py  sync_diagnostics.py  sync_history.py  sync_orchestration.py  sync_planning.py
src/marketing_control/migrations/: 0001_create_schema_migrations.sql  0002_create_sync_persistence.sql  0003_create_core_account_dimensions.sql  0004_create_supporting_google_ads_dimensions.sql  0005_create_core_daily_performance.sql  0006_create_keyword_search_term_daily_performance.sql  0007_create_segmented_daily_performance.sql  0008_create_asset_attachment_daily_performance.sql  0009_create_sync_report_runs.sql  0010_create_refresh_triggers.sql  0011_add_sync_diagnostics.sql  __init__.py
src/marketing_control/templates/: data_history.html  google_ads_onboarding.html  index.html  (+5 more)
tests/: test_app.py  test_asset_attachment_daily_performance.py  test_core_account_import.py  test_core_daily_performance.py  test_credentials.py  test_data_access.py  test_data_history.py  test_google_ads.py  test_google_ads_adapter.py  test_imported_data_preview.py  test_initial_history.py  test_integration_status.py  test_keyword_search_term_performance.py  test_launcher.py  test_logging.py  test_oauth.py  test_package.py  test_packaging_resources.py  test_refresh_triggers.py  test_segmented_daily_performance.py  test_settings.py  test_storage.py  test_supporting_entities_import.py  test_sync_diagnostics.py  test_sync_history.py  test_sync_orchestration.py  test_sync_planning.py
