[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketing-control"
version = "0.1.0"
description = "Foundation for the Marketing Control project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
marketing-control = "marketing_control:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_control"]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
