[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketing-control"
version = "0.1.0"
description = "Foundation for the Marketing Control project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "google-auth-oauthlib>=1.4.0",
    "google-ads>=31.1.0",
    "jinja2>=3.1.6",
    "keyring>=25.7.0",
    "python-multipart>=0.0.20",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
marketing-control = "marketing_control:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pyinstaller==6.17.0",
    "ruff>=0.8,<1",
    "types-grpcio>=1.82.1.20260711",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_control"]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["google.ads.googleads.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
